Fix alignment and titles in sponsors

--- a/src/components/sponsors/sponsors.module.css
+++ b/src/components/sponsors/sponsors.module.css
@@ -58,8 +58,6 @@
   .grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
-    justify-content: center;
   }
 
   .gold,
@@ -76,6 +74,7 @@
     }
     .grid {
       grid-template-columns: 1fr 1fr 1fr 1fr;
+      align-items: center;
     }
   }
 
